@@ -36,4 +36,5 @@ Text with Java types com.teaminabox.foo.BigClass and an inner class com.teaminab
 [[TwikiBrowserContentRendererTest]] links and [[TwikiBrowserContentRendererTest]]
 
 Bug: [ 1490342 ] URL in brackets detected incorrectly: I am sure you have heard of Google (http://www.google.com).
-Bug: [ 1487063 ] Some WikiWords not recognized: TipsJ2ME EclipseME MyVPN MeetingNotes2006x03x25 blah
+Bug: [ 1487063 ] Some !WikiWords not recognized: TipsJ2ME EclipseME MyVPN MeetingNotes2006x03x25 blah
+Bug: [ 1181020 ] Escape !WikiWords such as !WardsBrowserContentRendererTest !TipsJ2ME !MeetingNotes2006x03x25 ![[TwikiBrowserContentRendererTest]]
